dark mode; change tag box location; fix examples not showing

--- a/templates/ja/Read/style.css
+++ b/templates/ja/Read/style.css
@@ -1,3 +1,47 @@
+html, .card {
+    --card-color: black;
+    --card-bg-color: white;
+
+    --term-color: #b72222;
+
+    --label-color:  #8a7967;
+    --usage-color: #665a57;
+
+    --eg-color: grey;
+    --eg-bg-color: #f6f6f6;
+    --def-color: #df9797;
+
+    --tag-color: #5c5c5c;
+    --ori-tag-bg-color: #f7e7d0;
+    --ai-tag-bg-color: #cedef2;
+
+    --brief-color: #9b9b9b;
+
+    --footer-border-color: lightgrey;
+}
+
+html.night_mode, html.nightMode, .card.night_mode, .card.nightMode {
+    --card-color: #968e8b;
+    --card-bg-color: #121212;
+
+    --term-color: #ea8971;
+
+    --label-color:  #717171;
+    --usage-color: #8b8b8b;
+
+    --eg-color: white;
+    --eg-bg-color: #282828;
+    --def-color: #968e8b;
+
+    --tag-color: #717171;
+    --ori-tag-bg-color: #3f3f3f;
+    --ai-tag-bg-color: #282828;
+
+    --brief-color: #8b8b8b;
+
+    --footer-border-color: #575757;
+}
+
 /*通用*/
 .root {
     transform: scale(1);
@@ -13,8 +57,8 @@
     font-family: arial;
     font-size: 20px;
     text-align: left;
-    color: black;
-    background-color: white;
+    color: var(--card-color);
+    background-color: var(--card-bg-color);
 }
 
 .center {
@@ -37,11 +81,11 @@
 }
 
 .label {
-    color: #8a7967;
+    color: var(--label-color);
 }
 
 .usage {
-    color: #00205b;
+    color: var(--usage-color);
     font-weight: bold;
     margin-right: 10px;
 }
@@ -79,15 +123,11 @@
 header {
     position: relative;
 }
-#tag-box {
+
+#frequency-tag {
     position: absolute;
     top: -10px;
-    left: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-}
-#frequency-tag {
+    left: 5px;
     display: flex;
     height: 15px;
     margin-bottom: 8px;
@@ -107,37 +147,39 @@ header {
 {
     background: #146c14;
 }
-#tag-box .tag {
+
+footer {
+    margin-top: 20px;
+    border-top: 1px solid;
+    padding: 10px 10px;
+    border-color: var(--footer-border-color);
+}
+#topic-box .tag {
     padding: 4px 8px;
     border-radius: 4px;
-    margin-bottom: 4px;
+    margin-right: 10px;
     font-size: 12px;
-    color: #5c5c5c;
-    max-width: 100px;
+    color: var(--tag-color);
 }
-@media (min-width: 600px) {
-    #tag-box .tag {
-        max-width: 400px;
-    }
+
+#topic-box .original-tag {
+    background-color: var(--ori-tag-bg-color);
 }
-#tag-box .original-tag {
-    background-color: #f7e7d0;
-}
-#tag-box .ai-tag {
-    background-color: #cedef2;
+#topic-box .ai-tag {
+    background-color: var(--ai-tag-bg-color);
 }
 
 /*释义的使用频度介绍*/
 #brief {
     font-size: 16px;
-    color: #9b9b9b;
+    color: var(--brief-color);
 }
 
 
 /*头部*/
 
 #term {
-    color: #b72222;
+    color: var(--term-color);
 }
 
 
@@ -158,19 +200,19 @@ main {
     margin-top: 20px;
     margin-bottom: 30px;
     padding: 30px 20px;
-    background-color: #f6f6f6;
+    background-color: var(--eg-bg-color);
     border-radius: 8px;
     font-size: 22px;
 }
 
 #eg-box .content {
-    color: grey;
+    color: var(--eg-color);
     font-style: italic;
     line-height: 1.35em;
 }
 
 #def-box {
-    color: #df9797;
+    color: var(--def-color);
 }
 
 
